--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "src/Jimple.js",
   "tonicExample": "var Jimple = require('jimple');",
   "scripts": {
-    "test": "mocha -R spec"
+    "build-for-browser": "babel -d dist src/",
+    "test-in-browser": "karma start karma.config.js",
+    "test-in-node": "mocha -R spec",
+    "test": "npm run-script test-in-node && npm run-script test-in-browser"
   },
   "repository": {
     "type": "git",
@@ -19,17 +22,33 @@
     "di",
     "container"
   ],
-  "author": "Fernando Jorge Mota <f.j.mota13@gmail.com>",
+  "author": "Fernando Jorge Mota <contato@fjorgemota.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/fjorgemota/jimple/issues"
   },
   "homepage": "https://github.com/fjorgemota/jimple#readme",
   "devDependencies": {
-    "mocha": "^2.3.2",
-    "expect.js": "^0.3.1"
+    "babel-cli": "^6.5.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "expect.js": "^0.3.1",
+    "karma": "^0.13.21",
+    "karma-browserify": "^5.0.2",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-spec-reporter": "0.0.24",
+    "mocha": "^2.3.2"
   },
-  "engines" : {
-    "node" : ">=4.0.0"
+  "engines": {
+    "node": ">=4.0.0"
+  },
+  "dependencies": {
+    "babel-core": "^6.5.2",
+    "babel-polyfill": "^6.5.0"
   }
 }
