--- a/package.json
+++ b/package.json
@@ -42,13 +42,12 @@
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.24",
-    "mocha": "^2.3.2"
+    "mocha": "^2.3.2",
+    "phantomjs-prebuilt": "2.1.4",
+    "babel-core": "^6.5.2",
+    "babel-polyfill": "^6.5.0"
   },
   "engines": {
     "node": ">=4.0.0"
-  },
-  "dependencies": {
-    "babel-core": "^6.5.2",
-    "babel-polyfill": "^6.5.0"
   }
 }
