--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "homepage": "https://github.com/fjorgemota/jimple#readme",
   "devDependencies": {
     "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
     "babel-plugin-transform-es2015-modules-umd": "^6.5.0",
+    "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
@@ -43,9 +45,8 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.24",
     "mocha": "^2.3.2",
-    "phantomjs-prebuilt": "2.1.4",
-    "babel-core": "^6.5.2",
-    "babel-polyfill": "^6.5.0"
+    "phantomjs-prebuilt": "^2.1.4",
+    "watchify": "^3.7.0"
   },
   "engines": {
     "node": ">=4.0.0"
