--- a/.travis.yml
+++ b/.travis.yml
@@ -26,3 +26,7 @@ deploy:
     repo: fjorgemota/jimple
 addons:
   firefox: latest
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
