--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,11 @@ deploy:
     repo: fjorgemota/jimple
 addons:
   firefox: latest
+  apt: 
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
