--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-spec-reporter": "0.0.24",
     "mocha": "^2.3.2",
     "phantomjs-prebuilt": "^2.1.4",
+    "karma-chrome-launcher": "^0.2.2",
     "watchify": "^3.7.0"
   },
   "engines": {
