--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "karma-browserify": "^5.0.2",
     "karma-firefox-launcher": "^0.1.7",
     "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.24",
     "mocha": "^2.3.2",
     "phantomjs-prebuilt": "^2.1.4",
