--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ addons:
     packages:
       - google-chrome-stable
 before_install:
+  - npm update -g npm 
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
