--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "jimple",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "homepage": "https://github.com/fjorgemota/jimple",
   "authors": [
     "Fernando Jorge Mota <contato@fjorgemota.com>"
@@ -21,7 +21,9 @@
     "container",
     "dependency injection", 
     "services",
-    "parameters" 
+    "parameters",
+    "inversion of control",
+    "IoC"
   ],
   "license": "MIT",
   "ignore": [
