--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,4 @@ before_install:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 after_script:
-  - codeclimate-test-reporter < coverage/lcov.info
+  - npm run publish-codeclimate
