--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-for-browser": "babel -d dist src/",
     "test-in-browser": "karma start karma.config.js",
     "test-in-node": "istanbul cover _mocha -- -R spec",
-    "test": "npm run test-in-node && npm run-script test-in-browser"
+    "test": "npm run test-in-node && npm run-script test-in-browser",
+    "publish-codeclimate": "codeclimate-test-reporter < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "codeclimate-test-reporter": "^0.3.1",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.2",
     "karma": "^0.13.21",
