--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test-in-browser": "karma start karma.config.js",
     "test-in-node": "istanbul cover _mocha -- -R spec",
     "test": "npm run test-in-node && npm run-script test-in-browser",
-    "publish-codeclimate": "codeclimate-test-reporter < coverage/lcov.info"
+    "publish-codeclimate": "codeclimate-test-reporter < coverage/lcov.info",
+    "publish-codacy": "codacy-coverage < coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -54,7 +55,8 @@
     "karma-spec-reporter": "0.0.24",
     "mocha": "^2.4.5",
     "phantomjs-prebuilt": "^2.1.4",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "codacy-coverage": "^1.1.3"
   },
   "engines": {
     "node": ">=4.0.0"
