--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "jimple",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "homepage": "https://github.com/fjorgemota/jimple",
   "authors": [
     "Fernando Jorge Mota <contato@fjorgemota.com>"
   ],
-  "description": "A port of Pimple Dependency Injection container to NodeJS and to the browser developed in ES6",
+  "description": "A Dependency Injection container to NodeJS and to the browser developed in ES6",
   "main": "dist/Jimple.js",
   "moduleType": [
     "amd",
