--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "codacy-coverage": "^1.1.3",
     "codeclimate-test-reporter": "^0.3.1",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.2",
+    "jsdoc": "^3.4.2",
     "karma": "^0.13.21",
     "karma-browserify": "^5.0.2",
     "karma-chrome-launcher": "^0.2.2",
@@ -55,8 +57,7 @@
     "karma-spec-reporter": "0.0.24",
     "mocha": "^2.4.5",
     "phantomjs-prebuilt": "^2.1.4",
-    "watchify": "^3.7.0",
-    "codacy-coverage": "^1.1.3"
+    "watchify": "^3.7.0"
   },
   "engines": {
     "node": ">=4.0.0"
