--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test-in-node": "istanbul cover _mocha -- -R spec",
     "test": "npm run test-in-node && npm run test-in-browser",
     "publish-codeclimate": "codeclimate-test-reporter < coverage/lcov.info",
-    "publish-codacy": "codacy-coverage < coverage/lcov.info"
+    "publish-codacy": "codacy-coverage < coverage/lcov.info",
+    "doc": "jsdoc -c conf.json",
+    "publish-doc": "npm run doc && gh-pages -d out"
   },
   "repository": {
     "type": "git",
@@ -37,25 +39,26 @@
   "homepage": "https://github.com/fjorgemota/jimple#readme",
   "devDependencies": {
     "babel-cli": "^6.6.0",
-    "babel-core": "^6.6.0",
+    "babel-core": "^6.22.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.6.0",
-    "babel-polyfill": "^6.6.0",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
-    "browserify": "^13.0.0",
-    "codacy-coverage": "^1.1.3",
-    "codeclimate-test-reporter": "^0.3.1",
+    "browserify": "^14.0.0",
+    "codacy-coverage": "^2.0.1",
+    "codeclimate-test-reporter": "^0.4.0",
     "expect.js": "^0.3.1",
+    "gh-pages": "^0.12.0",
     "istanbul": "^0.4.2",
     "jsdoc": "^3.4.2",
-    "karma": "^0.13.21",
+    "karma": "^1.4.1",
     "karma-browserify": "^5.0.2",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-mocha": "^0.2.2",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-spec-reporter": "0.0.24",
-    "mocha": "^2.4.5",
+    "karma-spec-reporter": "^0.0.26",
+    "mocha": "^3.2.0",
     "phantomjs-prebuilt": "^2.1.4",
     "watchify": "^3.7.0"
   },
