--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ deploy:
     repo: fjorgemota/jimple
 addons:
   firefox: latest
-  apt: 
+  apt:
     sources:
       - google-chrome
     packages:
@@ -54,10 +54,11 @@ addons:
   code_climate:
     repo_token: 5f7044d0caeea822858fa847e6d39b8cc7e5fd10718699785479e3630d243db9
 before_install:
-  - npm update -g npm 
+  - npm update -g npm
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 after_script:
   - npm run publish-codeclimate
   - npm run publish-codacy
+  - npm run publish-doc
