--- a/.travis.yml
+++ b/.travis.yml
@@ -53,16 +53,12 @@ deploy:
       tags: true
 addons:
   firefox: latest
-  apt:
-    sources:
-    - google-chrome
-    packages:
-    - google-chrome-stable
+  chrome: stable
   code_climate:
     repo_token: 5f7044d0caeea822858fa847e6d39b8cc7e5fd10718699785479e3630d243db9
 before_install:
 - npm update -g npm
-- export CHROME_BIN=chromium-browser
+- export CHROME_BIN=google-chrome-stable
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 after_script:
