--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jimple",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "A Dependency Injection container to NodeJS and to the browser developed in ES6",
   "main": "src/Jimple.js",
   "tonicExampleFilename": "tonicExample.js",
@@ -46,9 +46,9 @@
     "babelify": "^7.2.0",
     "browserify": "^14.0.0",
     "codacy-coverage": "^2.0.1",
-    "codeclimate-test-reporter": "^0.4.0",
+    "codeclimate-test-reporter": "^0.5.0",
     "expect.js": "^0.3.1",
-    "gh-pages": "^0.12.0",
+    "gh-pages": "^1.0.0",
     "istanbul": "^0.4.2",
     "jsdoc": "^3.4.2",
     "karma": "^1.4.1",
@@ -57,7 +57,7 @@
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-spec-reporter": "^0.0.26",
+    "karma-spec-reporter": "0.0.31",
     "mocha": "^3.2.0",
     "phantomjs-prebuilt": "^2.1.4",
     "watchify": "^3.7.0"
