--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "1.4.6",
   "description": "A Dependency Injection container to NodeJS and to the browser developed in ES6",
   "main": "src/Jimple.js",
+  "browser": "dist/Jimple.js",
   "runkitExampleFilename": "example.js",
   "scripts": {
-    "build-for-browser": "babel -d dist src/",
-    "test-in-browser": "karma start karma.config.js",
+    "build-for-browser": "babel -d dist src/ && uglifyjs --compress --mangle -o dist/Jimple.min.js dist/Jimple.js",
+    "test-in-browser": "karma start",
     "test-in-node": "istanbul cover _mocha -- -R spec",
     "test": "npm run test-in-node && npm run test-in-browser",
     "publish-codeclimate": "codeclimate-test-reporter < coverage/lcov.info",
     "publish-codacy": "codacy-coverage < coverage/lcov.info",
-    "doc": "jsdoc -c conf.json",
+    "doc": "documentation build src/** -f html -o out",
     "publish-doc": "npm run doc && gh-pages -d out"
   },
   "repository": {
@@ -38,28 +39,29 @@
   },
   "homepage": "https://github.com/fjorgemota/jimple#readme",
   "devDependencies": {
-    "babel-cli": "^6.6.0",
-    "babel-core": "^6.22.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.6.0",
-    "babel-polyfill": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^14.0.0",
-    "codacy-coverage": "^2.0.1",
+    "chai": "^4.1.2",
+    "codacy-coverage": "^2.0.3",
     "codeclimate-test-reporter": "^0.5.0",
-    "expect.js": "^0.3.1",
+    "documentation": "^5.3.2",
     "gh-pages": "^1.0.0",
     "istanbul": "^0.4.2",
-    "jsdoc": "^3.4.2",
-    "karma": "^1.4.1",
+    "karma": "^1.7.1",
     "karma-browserify": "^5.0.2",
     "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^1.0.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.31",
-    "mocha": "^4.0.0",
-    "phantomjs-prebuilt": "^2.1.14",
+    "mocha": "^4.0.1",
+    "phantomjs-prebuilt": "^2.1.15",
+    "uglify-js": "^3.1.3",
     "watchify": "^3.7.0"
   },
   "engines": {
