--- a/package.json
+++ b/package.json
@@ -48,32 +48,32 @@
   ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.6.0",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-env": "^1.7.0",
     "babelify": "^8.0.0",
     "browserify": "^16.0.0",
     "chai": "^4.1.2",
     "codacy-coverage": "^3.0.0",
     "codeclimate-test-reporter": "^0.5.0",
     "documentation": "^6.0.0",
-    "gh-pages": "^1.0.0",
+    "gh-pages": "^1.1.0",
     "istanbul": "^0.4.2",
     "karma": "^2.0.0",
-    "karma-browserify": "^5.0.2",
+    "karma-browserify": "^5.2.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-spec-reporter": "0.0.32",
     "mocha": "^5.0.0",
-    "phantomjs-prebuilt": "^2.1.15",
-    "size-limit": "^0.15.0",
-    "uglify-js": "^3.1.3",
-    "watchify": "^3.7.0"
+    "phantomjs-prebuilt": "^2.1.16",
+    "size-limit": "^0.18.0",
+    "uglify-js": "^3.3.26",
+    "watchify": "^3.11.0"
   },
   "engines": {
     "node": ">=4.0.0"
-  }
+  },
+  "dependencies": {}
 }
