Use preset-env instead of preset-2015

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-  "presets": ["es2015"] ,
+  "presets": [
+      ["env", {
+        "targets": {
+          "node": "4.0"
+        }
+      }]
+   ] ,
   "plugins": ["transform-es2015-modules-umd"]
 }
