--- a/.travis.yml
+++ b/.travis.yml
@@ -48,10 +48,12 @@ addons:
   code_climate:
     repo_token: 5f7044d0caeea822858fa847e6d39b8cc7e5fd10718699785479e3630d243db9
 before_install:
-- npm update -g npm
+- travis_retry npm update -g npm
 - export CHROME_BIN=google-chrome-stable
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
+install: travis_retry npm install 
+script: travis_retry npm test
 after_success:
 - npm run publish-codeclimate
 - npm run publish-codacy
