--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   "runkitExampleFilename": "example.js",
   "scripts": {
     "build-for-browser": "babel -d dist src/ && uglifyjs --compress --mangle -o dist/Jimple.min.js dist/Jimple.js",
-    "test-in-browser": "karma start",
-    "test-in-node": "istanbul cover _mocha -- -R spec",
-    "test": "npm run size && npm run test-in-node && npm run test-in-browser",
+    "test": "npm run size && npm run test:node && npm run test:browser:firefox && npm run test:browser:chrome",
     "publish-codeclimate": "codeclimate-test-reporter < coverage/lcov.info",
     "publish-codacy": "codacy-coverage < coverage/lcov.info",
     "doc": "documentation build src/** -f html -o out",
     "publish-doc": "npm run doc && gh-pages -d out",
     "size": "size-limit",
-    "lint": "eslint src/Jimple.js"
+    "lint": "eslint src/Jimple.js",
+    "test:browser:firefox": "vitest --run --browser firefox --reporter dot",
+    "test:browser:chrome": "vitest --run --browser chromium --reporter dot",
+    "test:node": "vitest --run --browser.enabled=false --reporter dot",
+    "test:watch": "vitest --browser.enabled=false"
   },
   "repository": {
     "type": "git",
@@ -47,33 +49,27 @@
     }
   ],
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^11.2.0",
+    "@vitest/browser": "^3.2.4",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babelify": "^8.0.0",
-    "browserify": "^16.2.2",
-    "chai": "^4.1.2",
-    "codacy-coverage": "^3.2.0",
-    "codeclimate-test-reporter": "^0.5.0",
-    "documentation": "^9.0.0",
-    "gh-pages": "^2.0.0",
-    "istanbul": "^0.4.2",
-    "karma": "^3.1.3",
-    "karma-browserify": "^6.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-spec-reporter": "0.0.32",
-    "mocha": "^6.1.3",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.1",
+    "codacy-coverage": "^3.4.0",
+    "codeclimate-test-reporter": "^0.5.1",
+    "documentation": "^14.0.3",
+    "gh-pages": "^6.3.0",
+    "istanbul": "^0.4.5",
     "phantomjs-prebuilt": "^2.1.16",
-    "size-limit": "^0.21.0",
-    "uglify-js": "^3.4.8",
-    "watchify": "^3.11.0"
+    "playwright": "^1.54.1",
+    "size-limit": "^11.2.0",
+    "uglify-js": "^3.19.3",
+    "vitest": "^3.2.4",
+    "watchify": "^4.0.0"
   },
   "engines": {
     "node": ">=4.0.0"
-  },
-  "dependencies": {}
+  }
 }
