Add support for code coverage using istanbul

--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
   "browser": "dist/Jimple.js",
   "runkitExampleFilename": "example.js",
   "scripts": {
-    "build-for-browser": "microbundle",
-    "test": "npm run size && npm run test:node && npm run test:browser:firefox && npm run test:browser:chrome",
+    "build": "microbundle",
+    "test": "npm run size && npm run test:node && npm run test:browser",
     "publish-codeclimate": "codeclimate-test-reporter < coverage/lcov.info",
     "publish-codacy": "codacy-coverage < coverage/lcov.info",
     "doc": "documentation build src/** -f html -o out",
     "publish-doc": "npm run doc && gh-pages -d out",
     "size": "size-limit",
     "lint": "eslint src/Jimple.js",
-    "test:browser:firefox": "vitest --run --browser firefox --reporter dot",
-    "test:browser:chrome": "vitest --run --browser chromium --reporter dot",
-    "test:node": "vitest --run --browser.enabled=false --reporter dot",
+    "test:browser": "vitest --run --reporter dot",
+    "test:node": "vitest --run --browser.enabled=false --reporter dot --coverage",
     "test:watch": "vitest --browser.enabled=false"
   },
   "repository": {
@@ -59,17 +58,13 @@
   "devDependencies": {
     "@size-limit/preset-small-lib": "^11.2.0",
     "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-istanbul": "^3.2.4",
     "babel-cli": "^6.26.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.1",
     "codacy-coverage": "^3.4.0",
     "codeclimate-test-reporter": "^0.5.1",
     "documentation": "^14.0.3",
     "gh-pages": "^6.3.0",
-    "istanbul": "^0.4.5",
     "microbundle": "^0.15.1",
     "playwright": "^1.54.1",
     "size-limit": "^11.2.0",
