Change name of the folder with the docs

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "test": "npm run size && npm run test:node && npm run test:browser",
     "publish-codeclimate": "codeclimate-test-reporter < coverage/lcov.info",
     "publish-codacy": "codacy-coverage < coverage/lcov.info",
-    "doc": "documentation build src/** -f html -o out",
-    "publish-doc": "npm run doc && gh-pages -d out",
+    "doc": "documentation build src/** -f html -o docs",
+    "publish-doc": "npm run doc && gh-pages -d docs",
     "size": "size-limit",
     "lint": "eslint src/Jimple.js",
     "test:browser": "vitest --run --reporter dot",
