Remove codacy coverage from project

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "build": "microbundle",
     "test": "npm run size && npm run test:node && npm run test:browser",
     "publish-codeclimate": "codeclimate-test-reporter < coverage/lcov.info",
-    "publish-codacy": "codacy-coverage < coverage/lcov.info",
     "doc": "documentation build src/** -f html -o docs",
     "publish-doc": "npm run doc && gh-pages -d docs",
     "size": "size-limit",
@@ -56,12 +55,11 @@
     }
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
     "@size-limit/preset-small-lib": "^11.2.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-istanbul": "^3.2.4",
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "codacy-coverage": "^3.4.0",
     "codeclimate-test-reporter": "^0.5.1",
     "documentation": "^14.0.3",
     "gh-pages": "^6.3.0",
