--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "microbundle": "^0.15.1",
     "playwright": "^1.54.1",
     "size-limit": "^11.2.0",
+    "vite": "^7.0.6",
     "vitest": "^3.2.4"
   },
   "engines": {
