Fix babelrc config

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,12 @@
 {
   "presets": [
-      ["env", {
-        "targets": {
-          "node": "20.0",
-	      "browsers": [ "not dead"]
+      [
+        "@babel/preset-env", {
+          "targets": {
+            "node": "20.0",
+            "browsers": [ "defaults", "not dead" ]
+          }
         }
-      }]
+      ]
    ]
 }
