--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+concurrency:
+  group: ${{ github.workflow }}
 jobs:
   build:
     runs-on: ubuntu-latest
