--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
               ${{ runner.os }}-
 
       - name: Install dependencies
-        run: npm install --no-audit
+        run: npm ci
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
