Add prettier as dependency

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "microbundle",
     "test": "npm run size && npm run test:node && npm run test:browser",
     "doc": "documentation build src/** -f html -o docs",
+    "format": "prettier -w src/*",
     "size": "npm run build && size-limit",
     "test:browser": "vitest --run",
     "test:node": "vitest --run --browser.enabled=false --coverage",
@@ -60,6 +61,7 @@
     "documentation": "^14.0.3",
     "microbundle": "^0.15.1",
     "playwright": "^1.54.1",
+    "prettier": "^3.6.2",
     "size-limit": "^11.2.0",
     "typescript": "^5.8.3",
     "vite": "^7.0.6",
