--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jimple",
   "type": "module",
-  "version": "1.5.0",
+  "version": "2.0.0-beta.0",
   "description": "A Dependency Injection container to NodeJS and to the browser developed in ES6",
   "source": "src/Jimple.ts",
   "exports": {
