--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "build": "microbundle --name Jimple",
     "test": "npm run size && npm run test:node && npm run test:browser",
     "doc": "rm -Rf docs && documentation build src/** -f html -o docs/api && npm run build && npm run doc:build",
-    "doc:build": "webpack --mode production",
-    "doc:dev": "webpack serve --mode development",
+    "doc:build": "vite build",
+    "doc:dev": "vite",
     "format": "prettier -w .",
     "size": "npm run build && size-limit",
     "test:browser": "vitest --run",
@@ -69,7 +69,6 @@
     "microbundle": "^0.15.1",
     "mini-css-extract-plugin": "^2.9.2",
     "monaco-editor": "^0.52.2",
-    "monaco-editor-webpack-plugin": "^7.1.0",
     "playwright": "^1.54.1",
     "prettier": "^3.6.2",
     "raw-loader": "^4.0.2",
@@ -77,10 +76,9 @@
     "style-loader": "^4.0.0",
     "typescript": "^5.8.3",
     "vite": "^7.0.6",
-    "vitest": "^3.2.4",
-    "webpack": "^5.101.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2"
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-monaco-editor": "^1.1.0",
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=20.0.0"
