Update homepage to use new URL address in package.json

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "bugs": {
     "url": "https://github.com/fjorgemota/jimple/issues"
   },
-  "homepage": "https://fjorgemota.github.io/jimple/",
+  "homepage": "https://jimple.js.org/",
   "size-limit": [
     {
       "path": "dist/Jimple.umd.js",
