--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "raw-loader": "^4.0.2",
     "size-limit": "^11.2.0",
     "style-loader": "^4.0.0",
+    "typedoc": "^0.28.10",
     "typescript": "^5.8.3",
     "vite": "^7.0.6",
     "vite-plugin-html": "^3.2.2",
