Use typedoc instead of documentation

--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "scripts": {
     "build": "microbundle --name Jimple",
     "test": "npm run size && npm run test:node && npm run test:browser",
-    "doc": "rm -Rf docs-src/public/api && documentation build src/** -f html -o docs-src/public/api && npm run build && npm run doc:build",
+    "doc": "rm -Rf docs-src/public/api && typedoc && npm run build && npm run doc:build",
     "doc:build": "vite build",
-    "doc:dev": "rm -Rf docs-src/public/api && documentation build src/** -f html -o docs-src/public/api && vite",
+    "doc:dev": "rm -Rf docs-src/public/api && typedoc && vite",
     "format": "prettier -w .",
     "size": "npm run build && size-limit",
     "test:browser": "vitest --run",
@@ -63,7 +63,6 @@
     "@vitest/coverage-istanbul": "^3.2.4",
     "babel-cli": "^6.26.0",
     "css-loader": "^7.1.2",
-    "documentation": "^14.0.3",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "microbundle": "^0.15.1",
