Use correct variable from the matrix

--- a/.github/workflows/test-bun.yml
+++ b/.github/workflows/test-bun.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: ${{ matrix.node-version }}
+          bun-version: ${{ matrix.bun-version }}
 
       - name: Cache Bun dependencies
         uses: actions/cache@v4
